2013-08-12  Andreas Schwab  <schwab@suse.de>

	PR binutils/15818
	* objdump.c (disassemble_section): Return early if nothing from
	this section needs to be disassembled.

2013-08-09  Nick Clifton  <nickc@redhat.com>

	* readelf.c (get_machine_flags): Handle RL78 G10 flag.

2013-07-26  Sergey Guriev  <sergey.s.guriev@intel.com>
	    Alexander Ivchenko  <alexander.ivchenko@intel.com>
	    Maxim Kuznetsov  <maxim.kuznetsov@intel.com>
	    Sergey Lega  <sergey.s.lega@intel.com>
	    Anna Tikhonova  <anna.tikhonova@intel.com>
	    Ilya Tocar  <ilya.tocar@intel.com>
	    Andrey Turetskiy  <andrey.turetskiy@intel.com>
	    Ilya Verbin  <ilya.verbin@intel.com>
	    Kirill Yukhin  <kirill.yukhin@intel.com>
	    Michael Zolotukhin  <michael.v.zolotukhin@intel.com>

	* dwarf.c (dwarf_regnames_i386): Add k0-k7 registers and
	numeration in comments.
	(dwarf_regnames_x86_64): Add xmm16-31 and k0-k7 registers to
	dwarf table.

2013-07-19  Nick Clifton  <nickc@redhat.com>

	PR binutils/15745
	* readelf.c (get_unwind_section_word): Whilst searching for a
	reloc section associated with an unwind section, check the type as
	well as the section number.

2013-07-18  Jim Thomas  <thomas@cfht.hawaii.edu>

	* ar.c (usage): Fix C conformance issue.

2013-07-18  Nick Clifton  <nickc@redhat.com>

	* doc/binutils.texi (nm, objdump): Remove bogus links to STABS
	documentation.

	* readelf.c (process_unwind): Do not return the result of a void
	function.

2013-07-15  Maciej W. Rozycki  <macro@codesourcery.com>

	* readelf.c (display_mips_gnu_attribute): Replace hardcoded magic
	numbers with enum values.

2013-07-12  Maciej W. Rozycki  <macro@codesourcery.com>

	* readelf.c (get_machine_flags): Handle EF_MIPS_NAN2008.

2013-07-10  Tristan Gingold  <gingold@adacore.com>

	* od-xcoff.c (OPT_LDINFO): Define.
	(options): Add ldinfo.
	(xcoff_help): Mention ldinfo.
	(xcoff_dump): Rename to ...
	(xcoff_dump_obj): ... this.  Add a break.
	(dump_dumpx_core): New function.
	(xcoff_dump_core): Likewise.